BWD-142 Add method to API to get all files in filestore
